client/src/App.css
body {
    background: #1c8ef9;
}

.app-container {
    height: 100%;
    width: 100%;
    color: #737373;
}
.body-container {
    padding: 20px;
}

/* nav bar */
.custom-navbar {
    background: #f5f5f5;
    padding: 10px 20px;
}

/* login & register */
.auth-wrapper {
    width: 100%;
    height: 100%;
    margin-top: 60px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    text-align: left;
}

.auth-inner {
    width: 450px;
    margin: auto;
    padding: 40px 55px 45px 55px;
    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
    background: #ffffff;
    border-radius: 15px;
    transition: all 0.3s;
}

.auth-wrapper h3 {
    text-align: center;
    margin: 0;
    line-height: 1;
    margin-bottom: 20px;
}

.auth-wrapper button {
    width: 100%;
    font-weight: bold;
}

.form-label {
    font-weight: bold;
}

.auth-error {
    color: red;
}

/* create notes */
.create-note {
    background: #f5f5f5;
    padding: 20px;
    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
    border-radius: 15px;
    transition: all 0.3s;
}

/* home page (all notes */
.custom-note-card {
    background: #f5f5f5;
    box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
    transition: all 0.3s;
    width: 300px;
    margin: 10px;
}

.custom-note-card-content {
    overflow: scroll;
    height: 150px;
}

.custom-card-date {
    font-size: 0.8rem;
    display: flex;
    justify-content: flex-end;
    margin: 5px;
}

.home-empty-notes-msg {
    color: white;
    display: flex;
    justify-content: center;
}

